scss/admin-options.scss
.tab-content{
    h1{
        text-align: center;
    }

    .template-search{
        display: flex;
        width: auto;
        padding: 1rem;
        background-color: #fff;
        margin-right: 1rem;
        margin-bottom: 1rem;
        gap: 1rem;

        input, select {
            font-size: 1rem;
            padding: .2rem 1rem;
        }

        input{
            width: -webkit-fill-available;
        }

        select{
            width: 20%;
        }
    }

    .coming-soon {
        text-align: center;
        font-size: 1.2rem;
    }

    .grigora-templates{
        position: relative;
        display: flex;
        flex-wrap: wrap;
        justify-content: center;
        padding-right: 1rem;
        gap: 1rem;      

        .grigora-templates-single{
            position: relative;           

            .grigora-screenshot{
                img{
                    border-top-left-radius: 5px;
                    border-top-right-radius: 5px;
                }
            }

            .grigora-template-name{               
                font-size: 1rem;
                font-weight: 600;
                text-align: center;
                padding: 1rem;
                background: #fff;
                border-bottom-left-radius: 5px;
                border-bottom-right-radius: 5px;
            }

            .demo-overlay {
                cursor: pointer;
                visibility: hidden;
                display: flex;
                justify-content: center;
                align-items: flex-end;
                position: absolute;
                top: 0;
                width: 100%;
                height: 100%;
                opacity: 0;
                border: 3px solid #0E9ECB;
                border-radius: 5px;
                transition: all .2s linear;

                a{
                    text-decoration: none;
                    color: #fff;
                    font-size: 1.5rem;
                    font-weight: 600;
                }

                .view-btn {
                    background: #0E9ECB;
                    font-size: 1rem;
                    color: #fff;
                    border: none;
                    width: 100%;
                    padding: 1rem;

                    &:hover{
                        cursor: pointer;
                    }
                }
            }

            &:hover > .demo-overlay{          
                    visibility: visible;       
                    opacity: 1 ;     
            }
        }

        .demo_modal{
            display: none;
            left: 50%;
            top: 50%;
            width: 100%;
            height: 100%;
            z-index: 99999;
            position: fixed;
            transform: translate(-50%, -50%);
            box-shadow: 1px 1px 10px 1px #0000003b;
            
            .modal_header {
                display: flex;
                justify-content: space-between;
                align-items: center;
                padding: 0 1rem;
                background-color: #fff;
                border-bottom: 1px solid currentColor;

                .modal_template_name{
                    display: flex;
                    align-items: center;
                    font-size: 1rem;
                    font-weight: 600;

                    svg {
                        margin-right: .5rem;

                        &:hover {
                            cursor: pointer;
                        }
                    }
                }

                .modal_screen_size {
                    display: flex;
                    gap: 1rem;

                    svg {
                        &:hover {
                            cursor: pointer;
                        }
                    }
                
                    .active{
                        fill:#4D3BB7;
                    }

                }                

                .modal_install_btn{
                    .btn-install {
                        text-decoration: none;
                        color: #fff;
                        font-size: 1rem;
                        font-weight: 600;
                        padding: .5rem 1rem;
                        border-radius: 5px;
                        border: none;
                        background-color: #4D3BB7;

                        &:hover {
                            cursor: pointer;
                        }

                        svg{
                            margin-left: .5rem;
                        }
                    }
                }
            }

            img{
                width: 100%;
                max-height: 600px;
                object-fit: cover;
            }
        }

        .open-modal {
            display: block;
        }
    }

    .cat_filter{
        display: none;
    }

    .text_filter{
        display: none;
    }
}

.modal-iframe-div{
    display: flex;
    background-color: #fff;
    margin: auto;
    height: 100%;

    iframe {
        display: flex;
        width: 100%;
        transition: all .3s linear;
    }
}

.open {
    display: block !important;
}

.confirm-modal{
    display: none;
}

.confirm-modal-content{
    display: flex;
    justify-content: center;
    align-items: center;
    position: fixed;
    top: 50%;
    left: 50%;
    width: 100%;
    height: 100%;
    transform: translate(-50%, -50%);
    background-color: #22344dcc;
    z-index: 100000;

    .background {
        padding: 1rem;
        animation: beat 500ms ease forwards;	
        background-color: #fff;
        box-shadow: #ffffff1a 0 1px 1px 0 inset, #32325d40 0 50px 100px -20px, #0000004d 0 30px 60px -30px;
    }

    @keyframes beat {
        25% { transform: scale(1.2); }
        100% { transform: scale(1); }
    }

    .px-1{
        padding-left: 1rem;
        padding-right: 1rem;
    }

    p{
        font-size: 1rem;
    }

    .confirm-btn {
        display: flex;
        justify-content: flex-end;
        gap: 1rem;

        button, p {
            font-size: 1rem;
            border: none;
            padding: .5rem 1rem;
            background-color: transparent;
    
            &:hover {
                cursor: pointer;
            }
        }

        p{
            text-align: center;          
            margin: 0;
        }

        .close-btn {
            border: none;
            cursor: pointer;
            text-transform: uppercase;
            border-radius: 4px;
            font-weight: 700;
            transition: background 100ms linear;
            border-bottom: 3px solid #681717;
            background: #bb2a2a;
            color: #fff;

            &:hover {
                background: #912121;
            }
        }

        .c-btn {
            border: none;
            cursor: pointer;
            text-transform: uppercase;
            border-radius: 4px;
            font-weight: 700;
            transition: background 100ms linear;
            border-bottom: 3px solid #131c29;
            background: #324c70;
            color: #fff;

            &:hover {
                background: #22344d;
            }
        }
    
    }
   
    p {
        word-break: break-word;            
    }
}

.desktop{
    margin-left: auto;
    margin-right: auto;
    max-width: 100%;    
}

.tablet {
    margin-left: auto;
    margin-right: auto;
    max-width: 800px;    
}

.mobile {
    margin-left: auto;
    margin-right: auto;
    max-width: 480px;    
}

